# arana-osint-sur-sur

./: .antigravityrules  .dockerignore  .gitignore  .roomodes  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  QWEN.md  README.md  TASKS.md  deploy_y_test_shutdown.sh  docker-compose.yml  entrypoint.sh  limpiar_repositorio.sh  mcp_config.json  sursur-daemon.service.bak  sursur_config.json  tmp_config.json
.qwen/: PROJECT_SUMMARY.md
client_python/: client.py
conf/: seeds.txt  sursur_config.ini
config/: seeds_arsenal_soberania.txt
config/prompts/: base_evaluator.txt
docs/: wslconfig_recommended.txt
frontend/: app.js  index.html  styles.css
include/: config_manager.hpp  evaluator.hpp  feed_generator.hpp  feedback_server.hpp  graph_connector.hpp  media_processor.hpp  monitor.hpp  spider.hpp
nginx/: nginx.conf
proto/: sursur_service.proto
rpm/: sursur-spider.spec
src/: config_manager.cpp  evaluator.cpp  feed_generator.cpp  feedback_server.cpp  graph_connector.cpp  main.cpp  media_processor.cpp  spider.cpp  test_spider.cpp
systemd/: sursur-daemon.service  sursur-daemon.timer
ui/: index.html
